# robot

./: CMakeLists.txt  calculate_robot_position.cpp  console_interface.cpp  console_interface.h  controll.cpp  controll.h  controll_interface.h  logger.cpp  logger.h  main.cpp  readme.md  robot_arm_params.h  trajectory_generator.cpp  trajectory_generator.h  watchdog.cpp  watchdog.h
sample/: sample_1.txt  sample_2.txt
src/: calculate_robot_position.cpp  calculate_robot_position.h  console_interface.cpp  console_interface.h  controll_interface.cpp  controll_interface.h  fine_trajectory.cpp  fine_trajectory.h  instruction_processor.cpp  instruction_processor.h  instruction_set.h  logger.cpp  logger.h  main.cpp  read_instruction_file.cpp  read_instruction_file.h  robot_arm_params.h  supervisor.cpp  supervisor.h  trajectory_generator.cpp  trajectory_generator.h
